--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             brandName: "Indion Techs Inc. : Edify",
             poweredBy: false,
             debug: true,
+            permissions: {
+              // ... other permissions
+                endMeeting: true,
+            },
             pin: {
                 allowed: true,
                 layout: "SPOTLIGHT",
