--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             brandName: "Indion Techs Inc. : Edify",
             poweredBy: false,
             debug: true,
-            permissions: {
-              // ... other permissions
-                endMeeting: true,
-            },
+//             permissions: {
+//               // ... other permissions
+//                 
+//             },
             pin: {
                 allowed: true,
                 layout: "SPOTLIGHT",
@@ -79,7 +79,7 @@
               toggleParticipantWebcam: true, // Can toggle other participant's webcam
               drawOnWhiteboard: true,
               toggleWhiteboard: true,
-      
+              endMeeting: true,
             },
       
             joinScreen: {
