--- a/index.html
+++ b/index.html
@@ -43,21 +43,17 @@
             brandName: "Indion Techs Inc. : Edify",
             poweredBy: false,
             debug: true,
-//             permissions: {
-//               // ... other permissions
-//                 
-//             },
             pin: {
                 allowed: true,
                 layout: "SPOTLIGHT",
               },
             leftScreen: {
                 actionButton: {
-                    label: "Rate Your Experience",
-                    href: "#",
+                  label: "Video SDK",
+                  href: "https://videosdk.live/",
                 },
-             },
-      
+              },
+
             participantCanLeave: true, // if false, leave button won't be visible
       
             // Live stream meeting to youtube
